crates/whiphand-tui/tests/snapshots/snapshots__manual_sign_off_200x50.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · Decision  (experimental)                                                                                                                                                    "
"┌ Decision needed · Ship it? ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ stage 2 of 3 · Checkout · attempt 2 of 3                                                                                                                                                             │"
"│Review the diff and the findings before this goes any further.                                                                                                                                        │"
"│                                                                                                                                                                                                      │"
"│• tests pass                                                                                                                                                                                          │"
"│• no new warnings                                                                                                                                                                                     │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│"
"│▸ Feedback*                                                                                                                                                                                           │"
"│    i to write it                                                                                                                                                                                     │"
"│  Artifacts (Enter pages one)                                                                                                                                                                         │"
"│  review  .whiphand/runs/20261010-100000-a1b2/review.md                                                                                                                                               │"
"│  Changes (Enter comments on one)                                                                                                                                                                     │"
"│  M src/cart.ts  +2 -1                                                                                                                                                                                │"
"│  A src/cart.test.ts  +12 -0                                                                                                                                                                          │"
"│ a Continue  ·  b Request changes  ·  X Abort run                                                                                                                                                     │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" a continue / approve  ·  b send back (retry) with the note and comments  ·  X abort the run  ·  i write the note (Ctrl-e: $EDITOR)  ·  ? help  ·  q back                                               "
