crates/whiphand-tui/tests/snapshots/snapshots__new_run_editing_80x24.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · New run  (experimental)                             "
"┌ New run · feature ───────────────────────────────────────────────────────────┐"
"│ Plan with me, build it, review it.                                           │"
"│ Another run is already in progress in this workspace.                        │"
"│ Disabled: lint.                                                              │"
"│ feature is required                                                          │"
"│                                                                              │"
"│ feature*        Checkout flow                                                │"
"│                 with saved cards▏                                            │"
"│ branch          main                                                         │"
"│ name            optional                                                     │"
"│ max iterations  the workflow's own budgets                                   │"
"│ attachments     file paths, one per line                                     │"
"│ dry run         [ ] resolve every step without running it                    │"
"│ worktree        [ ] changes land on a new branch in .whiphand/worktrees/     │"
"│                 [ Start run ]                                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" Enter new line  ·  Esc done  ·  Ctrl-e $EDITOR                                 "
