crates/whiphand-tui/tests/snapshots/snapshots__new_run_form_200x50.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · New run  (experimental)                                                                                                                                                     "
"┌ New run · feature ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Plan with me, build it, review it.                                                                                                                                                                   │"
"│ Another run is already in progress in this workspace.                                                                                                                                                │"
"│ Disabled: lint.                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│ feature*        What are we building?                                                                                                                                                                │"
"│ branch          main                                                                                                                                                                                 │"
"│ name            optional                                                                                                                                                                             │"
"│ max iterations  the workflow's own budgets                                                                                                                                                           │"
"│ attachments     file paths, one per line                                                                                                                                                             │"
"│ dry run         [ ] resolve every step without running it                                                                                                                                            │"
"│ worktree        [ ] changes land on a new branch in .whiphand/worktrees/                                                                                                                             │"
"│                 [ Start run ]                                                                                                                                                                        │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" s start the run  ·  ? help  ·  q back                                                                                                                                                                  "
